templates/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addtask-svc
spec:
  type: ClusterIP
  selector:
    app: addtask-api
  ports:
    - port: 80
      targetPort: 8000
