templates/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addtask-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: add-task-api.jhandu.shop
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: addtask-svc
                port:
                  number: 80
